--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
   <head>
     <script>console.log("Hello, World");</script>
     <title>Welcome!</title>
-    <link rel="stylesheet" href="styles/Login.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/login.css')}}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
@@ -11,12 +11,12 @@
   <body>
     <div class="welcome-statement">Welcome</div>
     <div class="coffee-bot-container">
-      <img class="coffee-bot-logo" src="assets/CoffeeBot_Logo.png" alt="CoffeeBot">
+      <img class="coffee-bot-logo" src="{{ url_for('static', filename='assets/CoffeeBot_Logo.png')}}" alt="CoffeeBot">
       <div class="title">Bean<span style="color: #87431D;">Bot</span></div>
       <div class="subtitle">Robot Coffee Delivery</div>
       <button>Login</button>
     </div>
-    <div class="sign-up-link">Don't have an account? Sign up <a href="">here</a></Div>
+    <div class="sign-up-link">Don't have an account? Sign up <a href="{{ url_for('register')}}">here</a></Div>
     
   </body>
 </html>
